--- a/files/etc/init/labs-viewer.conf
+++ b/files/etc/init/labs-viewer.conf
@@ -6,13 +6,13 @@ stop on runlevel [!2345]
 respawn
 
 env PATH=/web/env/bin
-env PYTHONPATH=/web/labs-viewer
+env PYTHONPATH=/web/src/charizard
 env LC_ALL='en_US.utf8'
 env CHARIZARD_ADMIN_PASS=/web/.passwd
 
-chdir /web/labs-viewer
+chdir /web/src/charizard
 exec gunicorn \
     --bind localhost:8080 \
     --worker-tmp-dir /tmp \
     --access-logfile - \
-    app:app
+    webapp.app:app
