use VARS for db path

--- a/files/etc/init/labs-viewer.conf
+++ b/files/etc/init/labs-viewer.conf
@@ -8,7 +8,9 @@ respawn
 env PATH=/web/env/bin
 env PYTHONPATH=/web/src/charizard
 env LC_ALL='en_US.utf8'
+
 env CHARIZARD_ADMIN_PASS=/web/.passwd
+env CHARIZARD_DB=/web/db
 
 chdir /web/src/charizard
 exec gunicorn \
